--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,17 +1,11 @@
 name: Run tests and generate report
 
-on: [push]
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+on: push
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
     name: Test
-    needs: download-history
     steps:
       - name: Check out source repository
         uses: actions/checkout@v3
