--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,3 +22,27 @@ jobs:
           path:
             allure-results
           retention-days: 1
+
+  upload_report:
+    runs-on: ubuntu-latest
+    name: Report
+    needs: run-tests
+    steps:
+      - name: setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: download artifacts
+        uses: actions/download-artifact@v3
+      - run: >
+          UUID=$(curl -X "POST"   "http://${{ secrets.SERVER }}/api/result"
+          -H "accept: */*"
+          -H "Type: multipart/form-data"   
+          -F 'allureResults=@allure-results.zip;type=application/zip' 
+          | python3 -c "import sys, json; print(json.load(sys.stdin)['uuid']);")
+          &&
+          DATA="{\"reportSpec\":{\"path\":[\"github_test\"],\"executorInfo\":{\"name\":\"github\",\"type\":\"actions\",\"url\":\"url_content\",\"buildOrder\":0,\"buildName\":\"build_name_content\",\"buildUrl\":\"build_url_content\",\"reportName\":\"report_name_content\",\"reportUrl\":\"report_url_content\"}},\"results\":[\"$UUID\"],\"deleteResults\":true}"
+          &&
+          curl -X "POST"   "http://${{ secrets.SERVER }}/api/report"   -H 'accept: */*'   -H 'Content-Type: application/json'   -d $DATA
+  
+    
