--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,7 @@ jobs:
           python-version: "3.10"
       - name: download artifacts
         uses: actions/download-artifact@v3
+      - run: apt install zip && zip -r allure-results.zip allure-results
       - run: ls
       - run: >
           UUID=$(curl -X "POST"   "http://${{ secrets.SERVER }}/api/result"
